--- a/app/views/node/index.html
+++ b/app/views/node/index.html
@@ -117,8 +117,8 @@
 			}
 			if(data.query.players.length !== 0){
 				$("#toggle_players").html("");
-				$.each(data.query.players, function(id, name) {
-					$("#toggle_players").append('<img data-toggle="tooltip" src="http://i.fishbans.com/helm/'+name+'/32" title="'+name+'" style="padding: 0 2px 6px 0;"/>');
+				$.each(data.query.players, function(id, player) {
+					$("#toggle_players").append('<img data-toggle="tooltip" src="http://i.fishbans.com/helm/'+player.name+'/32" title="'+name+'" style="padding: 0 2px 6px 0;"/>');
 				});
 			}else{
 				$("#toggle_players").html('<p class="text-muted">No players are currently online.</p>');
@@ -217,7 +217,7 @@
 			        dataLabels: {
 			        	format: '<div style="text-align:center"><span style="font-size:16px;color:' + 
 		                    ((Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black') + '">{y} MB</span><br/>' + 
-		                   	'<span style="font-size:10px;color:silver">/ 128 MB</span></div>'
+		                   	'<span style="font-size:10px;color:silver">/ {{ server.max_ram }} MB</span></div>'
 			        }
 			    }]
 			
