--- a/app/views/node/index.html
+++ b/app/views/node/index.html
@@ -118,7 +118,7 @@
 			if(data.query.players.length !== 0){
 				$("#toggle_players").html("");
 				$.each(data.query.players, function(id, player) {
-					$("#toggle_players").append('<img data-toggle="tooltip" src="http://i.fishbans.com/helm/'+player.name+'/32" title="'+name+'" style="padding: 0 2px 6px 0;"/>');
+					$("#toggle_players").append('<img data-toggle="tooltip" src="http://i.fishbans.com/helm/'+player.name+'/32" title="'+player.name+'" style="padding: 0 2px 6px 0;"/>');
 				});
 			}else{
 				$("#toggle_players").html('<p class="text-muted">No players are currently online.</p>');
